# Mime_V1

./: .gitignore  CURRENT_FEATURES.md  FUTURE_IDEAS.md  HOW_TO_USE.md  KNOWN_ISSUES.md  README.md
central_engine/: WORKSPACE
central_engine/engine/: BUILD  ekf.cpp  ekf.h  logger.cpp  logger.h  server.cpp
central_engine/ik_solver/: generate_protos.sh  ik_engine.py  requirements.txt  telemetry_pb2.py  telemetry_pb2_grpc.py
central_engine/proto/: BUILD  telemetry.proto  trajectory.proto
central_engine/tools/: rerun_logger.py
edge_nodes/: CMakeLists.txt
edge_nodes/firmware/: platformio.ini
edge_nodes/firmware/include/: config.example.h
edge_nodes/firmware/lib/: README.md
edge_nodes/firmware/lib/MPU9250/: MPU9250.h
edge_nodes/firmware/src/: main.cpp
edge_nodes/include/mime_edge/: hardware.h
edge_nodes/shared/: udp_packet.h
edge_nodes/src/: main.cpp
edge_nodes/vision/: config.py  config.yaml  pose_tracker.py  requirements.txt  tracker.py
godot_visualizer/: godot_visualizer.csproj  project.godot
godot_visualizer/Scenes/: Main.tscn
godot_visualizer/Scripts/: RobotController.cs  TelemetryClient.cs
machine_learning/: dataset.py  model.py  predict.py  train.py
mime_ros2_ws/install/: local_setup.sh  setup.sh
mime_ros2_ws/install/mime_moveit_bridge/lib/mime_moveit_bridge/: moveit_bridge_node
mime_ros2_ws/install/mime_moveit_bridge/share/mime_moveit_bridge/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
mime_ros2_ws/install/mime_moveit_bridge/share/mime_moveit_bridge/cmake/: mime_moveit_bridgeConfig.cmake
mime_ros2_ws/log/: latest_build
mime_ros2_ws/src/mime_moveit_bridge/: CMakeLists.txt  package.xml
mime_ros2_ws/src/mime_moveit_bridge/proto/: telemetry.proto
mime_ros2_ws/src/mime_moveit_bridge/src/: moveit_bridge_node.cpp
tools/wsl/: README.md  bridge.py
visualizer/: package-lock.json  package.json
visualizer/public/: robot.urdf
visualizer/server/: index.js  package-lock.json  package.json
visualizer/src/: App.tsx  index.css
visualizer/src-tauri/: tauri.conf.json
visualizer/src-tauri/src/: main.rs
visualizer/src/components/: Arm.tsx  Dashboard.css  Dashboard.tsx  Overlay.tsx  UrdfArm.tsx
